<resources>
    <string name="app_name">Sunshine</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_refresh" translatable="false">Refresh</string>
    <string name="deault_locale" translatable="false">Belo Horizonte,mg,br</string>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="SettingsActivity">Settings</string>

    <string name="pref_location_key" translatable="false">Location</string>
    <string name="pref_location_title" translatable="false">Default location for forecast</string>
    <string name="pref_location_default" translatable="false">Belo Horizonte,mg,br</string>

    <string name="pref_metric_title">Metrics</string>
    <string name="pref_list_title">Temperature Units</string>
    <string name="pref_sync_list_type">Select type below</string>
    <string name="pref_metric_list_default">metric</string>
    <string name="pref_metric_imperial">imperial</string>
    <string name="pref_metric_list_key">metrics</string>
    <string name="action_map">View location in Map</string>
</resources>
